[stdevMac] refs #2031 Add endpoint /api/v2/injectTransaction to swagger spec.
